--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -6,16 +6,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="../css/fullwidth.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+{#    <link rel="stylesheet" href="../css/fullwidth.css">#}
 
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
+        <!-- Header -->
         <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'portfolio:home' %}">Good Shepard Food Pantry</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url 'portfolio:home' %}">Good Shepard Food Pantry</a>
         </div>
-        <ul class="nav navbar-nav">
+        <div class="collapse navbar-collapse" id="topNavBar">
+         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'portfolio:client_list' %}">Clients
             <span class="caret"></span></a>
@@ -43,9 +52,18 @@
               <li><a href="{% url 'portfolio:donor_new' %}">Add Donor</a></li>
             </ul>
           </li>
-          <li><a href="{% url 'portfolio:account_settings_list' %}">Account Settings</a></li>
-          <li><a href="{% url "logout" %}">Logout</a></li>
+          <li>
+              <a href="{% url 'portfolio:account_settings_list' %}">
+                                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp; Account Settings
+              </a>
+          </li>
+          <li>
+              <a href="{% url "logout" %}">
+                                <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logout
+              </a>
+          </li>
         </ul>
+        </div>
       </div>
     </nav>
 
@@ -53,11 +71,28 @@
     <style>
         /* Remove the navbar's default margin-bottom and rounded borders */
         .navbar {
-            margin-bottom: 0;
+{#            margin-bottom: 0;#}
             border-radius: 0;
-            background-color:#D2EAFA;
+            font-family: 'Raleway', sans-serif;
+{#            background-color:#D2EAFA;#}
             font-size: 1.3em !important;
-            font-weight: bold;
+{#            font-weight: bold;#}
+        }
+        p,h2{
+             font-family: 'Raleway', sans-serif;
+             font-size: 1.5em !important;
+        }
+        label{
+             font-family: 'Raleway', sans-serif;
+             font-size: 15px !important;
+        }
+        th,a{
+                font-family: 'Raleway', sans-serif;
+                font-size: 20px;
+        }
+        td{
+                font-family: 'Releway';
+                font-size: 14px;
         }
 
         /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -93,7 +128,7 @@
     </style>
 </head>
 
-<body id="app-layout">
+<body id="app-layout" style="background-color: #c9c9c9">
 <div class="content container">
     <div class="row">
         <div class="col-md-10">
@@ -214,3 +249,4 @@
     </div>
 </body>
 </html>
+
