--- a/portfolio/templates/portfolio/visit_new.html
+++ b/portfolio/templates/portfolio/visit_new.html
@@ -1,29 +1,41 @@
 {% extends 'portfolio/base.html' %}
 
+{% load widget_tweaks %}
 {% block content %}
-    <h1>Record New Visit</h1>
-    <form method="POST" class="visit-form">{% csrf_token %}
-        <label>{{ form.client.label_tag }}</label>
-        <br>
-        {{ form.client }}
-        <br>
-         <label>{{ form.employee.label_tag }}</label>
-         <br>
-         {{ form.employee }}
-         <br>
-         <label>{{ form.visit_type.label_tag }}</label>
-         <br>
-         {{ form.visit_type }}
-         <br>
-         <label>{{ form.visit_date.label_tag }}</label>
-         <br>
-         {{ form.visit_date }}
-         <br>
-         <label>{{ form.status.label_tag }}</label>
-         <br>
-         {{ form.status }}
-         <br>
-         <br>
-        <button type="submit" class="save btn btn-default">Save</button>
-    </form>
+<div class="container-fluid">
+
+    <div class="row">
+
+        <div class="col-sm-12 col-md-12 col-lg-offset-2 col-lg-9">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h2>Record New Visit</h2>
+                    {% if error_message %}
+                        <p><strong>{{ error_message }}</strong></p>
+                    {% endif %}
+                    <form class="form-horizontal" role="form" action="" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {% for field in form %}
+                            <div class="form-group">
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <span class="text-danger small">{{ field.errors }}</span>
+                                </div>
+                                <label class="control-label col-sm-2" for="patient_title">{{ field.label_tag }}</label>
+                                <div class="col-lg-8  col-md-10 col-sm-12">
+                                    {{ field|add_class:"form-control"}}
+                                </div>
+                            </div>
+                        {% endfor %}
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> &nbsp;Save &nbsp;&nbsp;</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
+
