--- a/portfolio/templates/registration/password_change_form.html
+++ b/portfolio/templates/registration/password_change_form.html
@@ -1,13 +1,48 @@
-{% extends "base.html" %}
+{% extends "portfolio/base.html" %}
 
 {% block title %}Change your password{% endblock %}
-
+{% load widget_tweaks %}
 {% block content %}
-  <h1>Change you password</h1>
-  <p>Use the form below to change your password.</p>
-  <form action="." method="post">
-    {{ form.as_p }}
-    <p><input type="submit" value="Change"></p>
-    {% csrf_token %}
-  </form>
+<div class="container-fluid">
+
+    <div class="row">
+
+        <div class="col-sm-12 col-md-12 col-lg-offset-2 col-lg-9">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h2>Change you password</h2>
+                    <p>Use the form below to change your password.</p>
+                    <ul class="list-group">
+                        <li class="list-group-item list-group-item-info">Your password can't be too similar to your other personal information.</li>
+                        <li class="list-group-item list-group-item-info">Your password must contain at least 8 characters.</li>
+                        <li class="list-group-item list-group-item-info">Your password can't be a commonly used password.</li>
+                        <li class="list-group-item list-group-item-info">Your password can't be entirely numeric.</li>
+                    </ul>
+                    {% if error_message %}
+                        <p><strong>{{ error_message }}</strong></p>
+                    {% endif %}
+                    <form class="form-horizontal" role="form" action="." method="post">
+                        {% csrf_token %}
+                        {% for field in form %}
+                            <div class="form-group">
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <span class="text-danger small">{{ field.errors }}</span>
+                                </div>
+                                <label class="control-label col-sm-3" for="patient_title">{{ field.label_tag }}</label>
+                                <div class="col-lg-8  col-md-10 col-sm-9">
+                                    {{ field|add_class:"form-control"}}
+                                </div>
+                            </div>
+                        {% endfor %}
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> &nbsp;Save &nbsp;&nbsp;</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
