--- a/portfolio/templates/registration/password_reset_form.html
+++ b/portfolio/templates/registration/password_reset_form.html
@@ -2,12 +2,43 @@
 
 {% block title %}Reset your password{% endblock %}
 
+{% load widget_tweaks %}
 {% block content %}
-  <h1>Forgotten your password?</h1>
-  <p>Enter your e-mail address to obtain a new password.</p>
-  <form action="." method="post">
-    {{ form.as_p }}
-    <p><input type="submit" value="Send e-mail"></p>
-    {% csrf_token %}
-  </form>
+<div class="container-fluid" style="margin-top: 20%">
+
+    <div class="row">
+
+        <div class="col-sm-12 col-md-12 col-lg-offset-2 col-lg-9">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h2>Forgotten your password?</h2>
+                    <p>Enter your e-mail address to obtain a new password.</p>
+                    {% if error_message %}
+                        <p><strong>{{ error_message }}</strong></p>
+                    {% endif %}
+                    <form class="form-horizontal" role="form" action="." method="post">
+                        {% csrf_token %}
+                        {% for field in form %}
+                            <div class="form-group">
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <span class="text-danger small">{{ field.errors }}</span>
+                                </div>
+                                <label class="control-label col-sm-3" for="patient_title">{{ field.label_tag }}</label>
+                                <div class="col-lg-8  col-md-10 col-sm-9">
+                                    {{ field|add_class:"form-control"}}
+                                </div>
+                            </div>
+                        {% endfor %}
+                        <div class="form-group">
+                            <div class="col-sm-offset-3 col-sm-9">
+                                <button type="submit" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> &nbsp;Send e-mail &nbsp;&nbsp;</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
+
