--- a/portfolio/templates/portfolio/client_list.html
+++ b/portfolio/templates/portfolio/client_list.html
@@ -6,47 +6,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Good Shepherd Food Pantry</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
     </head>
     <body>
-    <style>
-        /* Remove the navbar's default margin-bottom and rounded borders */
-        .navbar {
-            margin-bottom: 0;
-            border-radius: 0;
-            background-color:#D2EAFA;
-            font-size: 1.1em !important;
-            font-weight: bold;
-        }
-        /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-        .row.content {
-            height: 450px
-        }
-        /* Set gray background color and 100% height */
-        .sidenav {
-            padding-top: 20px;
-            background-color: red;
-            height: 100%;
-        }
-        /* Set black background color, white text and some padding */
-        footer {
-            background-color: #777;
-            color: white;
-            padding: 15px;
-        }
-        /* On small screens, set height to 'auto' for sidenav and grid */
-        @media screen and (max-width: 767px) {
-            .sidenav {
-                height: auto;
-                padding: 15px;
-            }
-            .row.content {
-                height: auto;
-            }
-        }
-</style>
 
 <script>
 $(document).ready(function(){
@@ -69,8 +30,8 @@ $(document).ready(function(){
         <h2 style="padding-left: 15Px">Clients Information</h2>
     </div>
 
-    <div class="form-group pull-right">
-    <input type="text" class="search form-control" placeholder="What are you looking for?">
+    <div class="form-group pull-left">
+    <input type="text" class="search form-control" placeholder="What are you looking for ?">
 </div>
     <div>
         <table class="table table-striped table-bordered table-hover" id="userTbl">
@@ -87,7 +48,6 @@ $(document).ready(function(){
                 <th colspan="3">Actions</th>
             </tr>
             </thead>
-</thead>
             <tbody>
             {% for client in clients %}
                 <tr>
@@ -99,18 +59,20 @@ $(document).ready(function(){
                     <td>{{ client.zipcode }}</td>
                     <td>{{ client.email }}</td>
                     <td>{{ client.cell_phone }}</td>
-                    <td><a href="{% url 'portfolio:client_edit' pk=client.pk %}" class="btn btn-primary">Edit</a>
+                    <td><a href="{% url 'portfolio:client_edit' pk=client.pk %}" class="btn btn-primary">
+                        <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> &nbsp;Edit
+                    </a>
                     <td><a href="{% url 'portfolio:client_delete' pk=client.pk %}"
                            onclick="return confirm('Are you sure you want to delete?')"
-                           class="btn btn-primary">Delete</a>
+                           class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> &nbsp;Delete</a>
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
-                  <div class="row">
-                    <a href="{% url 'portfolio:client_new' %}" class="row"><span class="btn btn-primary">Add client</span></a>
-                    </div>
+        <div class="row" style="padding-left: 15Px">
+            <a href="{% url 'portfolio:client_new' %}" class="btn btn-primary"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp;Add Client</a>
+        </div>
     </div>
 
     </body>
