--- a/portfolio/templates/portfolio/visit_list.html
+++ b/portfolio/templates/portfolio/visit_list.html
@@ -6,52 +6,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Good Shepherd Food Pantry</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     </head>
     <body>
-    <style>
-        /* Remove the navbar's default margin-bottom and rounded borders */
-        .navbar {
-            margin-bottom: 0;
-            border-radius: 0;
-            background-color:#D2EAFA;
-            font-size: 1.1em !important;
-            font-weight: bold;
-        }
-
-        /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-        .row.content {
-            height: 450px
-        }
-
-        /* Set gray background color and 100% height */
-        .sidenav {
-            padding-top: 20px;
-            background-color: red;
-            height: 100%;
-        }
-
-        /* Set black background color, white text and some padding */
-        footer {
-            background-color: #777;
-            color: white;
-            padding: 15px;
-        }
-
-        /* On small screens, set height to 'auto' for sidenav and grid */
-        @media screen and (max-width: 767px) {
-            .sidenav {
-                height: auto;
-                padding: 15px;
-            }
-
-            .row.content {
-                height: auto;
-            }
-        }
-    </style>
 
     <script>
     $(document).ready(function(){
@@ -73,7 +30,7 @@
       <div class="row">
         <h2 style="padding-left: 15Px">Client Visit Information</h2>
     </div>
-    <div class="form-group pull-right">
+    <div class="form-group pull-left">
          <input type="text" class="search form-control" placeholder="What are you looking for?">
     </div>
 
@@ -102,18 +59,23 @@
                     <td>{{ visit.visit_type }}</td>
                     <td>{{ visit.visit_date }}</td>
                     <td>{{ visit.status }}</td>
-                    <td><a href="{% url 'portfolio:visit_edit' pk=visit.pk %}" class="btn btn-primary">Edit</a>
-                    <td><a href="{% url 'portfolio:visit_delete' pk=visit.pk %}"
+                    <td><a href="{% url 'portfolio:visit_edit' pk=visit.pk %}" class="btn btn-primary">
+                        <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> &nbsp;Edit
+                    </a>
+                    <td>
+                    <a href="{% url 'portfolio:visit_delete' pk=visit.pk %}"
                            onclick="return confirm('Are you sure you want to delete?')"
-                           class="btn btn-primary">Delete</a>
+                           class="btn btn-danger">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> &nbsp;Delete
+                    </a>
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
-                 <div class="row">
+                 <div class="row" style="padding-left: 15Px">
                     <a href="{% url 'portfolio:visit_new' %}" class="row"><span
-                           class="btn btn-primary">Record New Visit</span></a>
+                           class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> &nbsp;Record New Visit</span></a>
                  </div>
     </div>
     </body>
